<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="20dp"
    tools:context=".AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        android:text="@string/about_company_name"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:textSize="40sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        android:text="@string/about_street"
        android:gravity="fill_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        android:text="@string/about_region"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        android:text="@string/about_telf"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        android:text="@string/about_fax"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        android:textColorLink="@color/textNormalColor"
        android:text="@string/about_mail"
        android:linksClickable="true"
        android:autoLink="email"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        android:textColorLink="@color/textNormalColor"
        android:text="@string/about_web"
        android:linksClickable="true"
        android:autoLink="web"
        />

</LinearLayout>
