<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textNormalColor"
        android:textSize="50sp"
        android:layout_marginLeft="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/main_init_session_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/apryso_button"
            android:drawableTop="@drawable/icon_init_session_white"
            android:onClick="initSessionBtClickHandler"
            android:padding="@dimen/main_button_padding"
            android:text="@string/main_init_session_caption"
            android:textColor="@color/textButtonNormalColor"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/main_space_width" />

        <Button
            android:id="@+id/main_session_manager_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/apryso_button"
            android:drawableTop="@drawable/icon_session_manager_white"
            android:onClick="sessionManagerBtClickHandler"
            android:padding="@dimen/main_button_padding"
            android:text="@string/main_session_manager_caption"
            android:textColor="@color/textButtonNormalColor"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/main_space_width" />

        <Button
            android:id="@+id/main_config_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/apryso_button"
            android:drawableTop="@drawable/icon_config_white"
            android:onClick="configBtClickHandler"
            android:padding="@dimen/main_button_padding"
            android:text="@string/main_config_caption"
            android:textColor="@color/textButtonNormalColor"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/main_space_width" />

        <Button
            android:id="@+id/main_about_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/apryso_button"
            android:drawableTop="@drawable/icon_about_white"
            android:onClick="aboutBtClickHandler"
            android:padding="@dimen/main_button_padding"
            android:text="@string/main_about_caption"
            android:textColor="@color/textButtonNormalColor"
            />

    </LinearLayout>
</LinearLayout>
