<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/session_manager_entry_content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/textNormalColor"
        android:text="@string/session_manager_entry_content"
    />

    <TextView
        android:id="@+id/session_manager_entry_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        app:layout_constraintStart_toEndOf="@id/session_manager_entry_content_text"
        app:layout_constraintBaseline_toBaselineOf="@id/session_manager_entry_content_text"
        />

    <TextView
        android:id="@+id/session_manager_entry_barcode_format_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
        android:paddingStart="10dp"
        android:textColor="@color/textNormalColor"
        android:text="@string/session_manager_entry_barcode_format"
        app:layout_constraintTop_toBottomOf="@id/session_manager_entry_content_text"
        app:layout_constraintStart_toStartOf="@id/session_manager_entry_content_text"
        />

    <TextView
        android:id="@+id/session_manager_entry_barcode_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        app:layout_constraintStart_toEndOf="@id/session_manager_entry_barcode_format_text"
        app:layout_constraintBaseline_toBaselineOf="@id/session_manager_entry_barcode_format_text"
        />

    <TextView
        android:id="@+id/session_manager_entry_reads_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
        android:paddingStart="10dp"
        android:textColor="@color/textNormalColor"
        android:text="@string/session_manager_entry_reads"
        app:layout_constraintTop_toBottomOf="@id/session_manager_entry_barcode_format_text"
        app:layout_constraintStart_toStartOf="@id/session_manager_entry_barcode_format_text"
        />

    <TextView
        android:id="@+id/session_manager_entry_reads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        app:layout_constraintStart_toEndOf="@id/session_manager_entry_reads_text"
        app:layout_constraintBaseline_toBaselineOf="@id/session_manager_entry_reads_text"
        />

    <TextView
        android:id="@+id/session_manager_entry_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
        android:paddingStart="10dp"
        android:textColor="@color/textNormalColor"
        android:text="@string/session_manager_entry_date"
        app:layout_constraintTop_toBottomOf="@id/session_manager_entry_reads_text"
        app:layout_constraintStart_toStartOf="@id/session_manager_entry_reads_text"
        />

    <TextView
        android:id="@+id/session_manager_entry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        app:layout_constraintStart_toEndOf="@id/session_manager_entry_date_text"
        app:layout_constraintBaseline_toBaselineOf="@id/session_manager_entry_date_text"
        />

    <Button
        android:id="@+id/session_manager_entry_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/apryso_button"
        android:focusable="false"
        android:textColor="@color/textButtonNormalColor"
        android:layout_marginRight="30dp"
        android:text="@string/session_manager_entry_delete"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/session_manager_entry_reads"
        app:layout_constraintRight_toRightOf="parent"/>


    <Button
        android:id="@+id/session_manager_entry_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/apryso_button"
        android:focusable="false"
        android:textColor="@color/textButtonNormalColor"
        android:layout_marginRight="10dp"
        android:text="@string/session_manager_entry_add"
        app:layout_constraintBaseline_toBaselineOf="@+id/session_manager_entry_delete"
        app:layout_constraintEnd_toStartOf="@+id/session_manager_entry_delete"/>

    <Button
        android:id="@+id/session_manager_entry_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/apryso_button"
        android:focusable="false"
        android:textColor="@color/textButtonNormalColor"
        android:layout_marginRight="10dp"
        android:text="@string/session_manager_entry_subtract"
        app:layout_constraintBaseline_toBaselineOf="@+id/session_manager_entry_add"
        app:layout_constraintEnd_toStartOf="@+id/session_manager_entry_add"/>


</android.support.constraint.ConstraintLayout>

