<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/session_manager_group_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:textColor="@color/textNormalColor"
        android:text="@string/session_manager_group_session_name"
    />

    <TextView
        android:id="@+id/session_manager_group_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        app:layout_constraintStart_toEndOf="@id/session_manager_group_title_text"
        app:layout_constraintBaseline_toBaselineOf="@id/session_manager_group_title_text"
        />

    <TextView
        android:id="@+id/session_manager_group_reads_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
        android:textColor="@color/textNormalColor"
        android:text="@string/session_manager_group_number_reads"
        app:layout_constraintTop_toBottomOf="@id/session_manager_group_title_text"
        app:layout_constraintEnd_toEndOf="@id/session_manager_group_title_text"
        />

    <TextView
        android:id="@+id/session_manager_group_reads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textNormalColor"
        app:layout_constraintStart_toEndOf="@id/session_manager_group_reads_text"
        app:layout_constraintBaseline_toBaselineOf="@id/session_manager_group_reads_text"
        />


    <Button
        android:id="@+id/session_manager_group_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:background="@drawable/apryso_button"
        android:textColor="@color/textButtonNormalColor"
        android:focusable="false"
        android:minHeight="40dp"
        android:layout_gravity="center_vertical"
        android:text="@string/session_manager_group_send"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/session_manager_group_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/apryso_button"
        android:textColor="@color/textButtonNormalColor"
        android:layout_marginRight="10dp"
        android:focusable="false"
        android:minHeight="40dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/session_manager_group_delete"
        app:layout_constraintEnd_toStartOf="@+id/session_manager_group_send"/>


</android.support.constraint.ConstraintLayout>

